Revision history for Data-Verifier

{{$NEXT}}

0.44 Feb 23 2011
  * Use Pod::Weaver

0.43 Jan 23 2011
  * Various fixes to the synopses
  * More dzil love

0.42      2011-01-23 09:37:12 America/Chicago
  * Add Git::Commit to make the Changes not be stale
  * Make JSON::XS a dep to get tests passing (Thanks ANDK!)

0.41      2011-01-23 09:28:00 America/Chicago
  * Use Dist::Zilla
  * Fix POD error
  * Add get_values to Results (Jason May)

0.40 Jan 17, 2010
  * Fix typo in POD (Jason May)

0.39 Jan 3, 2010
  * Add JSON::Any to test_requires

0.38
  * Add is_wrong predicate to Results object
  * Document the internals of Results
  * Add a has_field to Results
  * is_missing no longer returns true for arbitrary field names
  * Add many more tests to the default case

0.37
  * Don't dereference ArrayRef values with a single member. (Dennis Schön,
    RT #60425)

0.36
  * Don't die by attempting to cram a non-arrayref-ref into an array-ref.

0.35
  * Point out that D:V stops processing on the first failure

0.34    Jul 13, 2010
  * Allow the data passed into verify to be an object rather than just a
    HashRef (George Hartzell)

0.33    Jul 9, 2010
  * Match what the documentation says and allow the value of "filters" to be
    a single coderef or an array of coderefs.  (RT #59211, Thanks Ron Savage!)

0.32    June 25, 2010
  * POD fix

0.31    April 9, 2010
  * Add valid_values to Results class

0.30    March 30, 2010
  * Fix accidental warning about the wrong field.  We DO serialize original_value!

0.29    March 10, 2010
  * Add post_filter_value to Field and populate it with the value after
    applying filters.
  * Populate original_value with the value that was submitted, unchanged.
    This is a slightly invasive change but if the field was valid then it will
    re-filter back to the same value so it is considered safe to do.
  * Change type of original_value to ArrayRef|Str to handle multiple
    values of a param.

0.28    February 2, 2010